--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,13 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, intial-scale=1">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="{% static 'jquery3.3.1.min.js' %}"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="{% static 'main.js' %}"></script>
 	<script src="{% static 'doodle.js' %}"></script>
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic" rel="stylesheet" type="text/css">
@@ -23,7 +19,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="{% static 'style/style.css' %}">
 	<link rel="apple-touch-icon" sizes="180x180" href="{% static 'icon/apple-icon-180x180.png' %}">
-	<link rel="icon" type="image/x-icon' %}" href="{% static 'favicon.ico">
+	<link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 	<link rel="manifest" href="{% static 'icon/manifest.json' %}">
 	<meta name="msapplication-TileColor" content="#00b32d">
 	<meta name="msapplication-TileImage" content="{% static 'icon/ms-icon-144x144.png' %}">
@@ -31,53 +27,51 @@
 </head>
 <body>
 	<div class="bamboo"></div>
-	<div class="container-fluid main">
-		<nav class="navbar navbar-default">
-			<div class="container">
-				<div class="row">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
-					    	<i class="fa fa-angle-down"></i>
-					    </button>
-						<a class="navbar-brand" href="/" title="Home">NelNorris.com</a>
+	<div class="main">
+		<nav class="navbar">
+			<div class="navwrap">
+				<div class="nav-left">
+					<a class="navbar-brand" href="/" title="Home">NelNorris.com</a>
+				</div>
+				<div class="nav-right">
+					<div id="nav-dropdown">
+						<div class="navblob"></div>
+						<div class="navblob"></div>
+						<div class="navblob"></div>
 					</div>
-					<div class="collapse navbar-collapse" id="navbar">
-						<ul class="nav navbar-nav">
-							<li><a href="/blog">Blog</a></li>
-							<li><a href="/doodle">2014 Doodle</a></li>
-							<li><a href="/archive">Post Archive</a></li>
-						</ul>
-					</div>
+					<ul role="navigation" class="navbar-nav">
+						<li><a href="/blog">Blog</a></li>
+						<li><a href="/doodle">2014 Doodle</a></li>
+						<li><a href="/archive">Post Archive</a></li>
+					</ul>
 				</div>
 			</div>
 		</nav>
 		<header>
-			<div class="container">
-				<div class="row">
-					{% block pagetitle %}
-					{% endblock %}
-				</div>
-			</div>
+			{% block pagetitle %}
+			{% endblock %}
 		</header>
 		<main>
-			<div class="container content">
-				<div class="row">
-					{% block content %}
-					{% endblock %}
-				</div>
+			<div class="content">
+				{% block content %}
+				{% endblock %}
 			</div>
 		</main>
 		<footer>
-			<div class="container-fluid">
-				<div class="row">
-					<p class="social">
-						<a href="https://twitter.com/NelNorris" title="Twitter" aria-label="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
-						<a href="https://www.linkedin.com/in/elizabeth-norris-217b9698/" title="LinkedIn" aria-label="LinkedIn" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-						<a href="https://github.com/NelNorris" title="Github" aria-label="Github" target="_blank"><i class="fa fa-github-alt"></i></a>
-						<a href="https://soundcloud.com/nellie-norris" title="Soundcloud" aria-label="Soundcloud" target="_blank"><i class="fa fa-soundcloud"></i></a>
-					</p>
-				</div>
-			</div>
+			<ul class="social" role="navigation">
+				<li>
+					<a href="https://twitter.com/NelNorris" title="Twitter" aria-label="Twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+				</li>
+				<li>
+					<a href="https://www.linkedin.com/in/elizabeth-norris-217b9698/" title="LinkedIn" aria-label="LinkedIn" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+				</li>
+				<li>
+					<a href="https://github.com/NelNorris" title="Github" aria-label="Github" target="_blank"><i class="fa fa-github-alt"></i></a>
+				</li>
+				<li>
+					<a href="https://soundcloud.com/nellie-norris" title="Soundcloud" aria-label="Soundcloud" target="_blank"><i class="fa fa-soundcloud"></i></a>
+				</li>
+			</ul>
 		</footer>
 	</div>
 </body>
